# clauditor

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: audit-claude-md.md  audit-consolidate.md  audit-entities.md  audit-local-docs.md  audit-memory.md  audit-recon.md  audit-rules.md  audit-security-config.md  audit-verify.md  clauditor-claude-md.md  clauditor-consolidate.md  clauditor-entities.md  clauditor-local-docs.md  clauditor-memory.md  clauditor-recon.md  clauditor-rubric-currency.md  clauditor-rules.md  clauditor-security-config.md  clauditor-verify.md
hooks/: hooks.json  session-start-review-nudge.sh
skills/audit-claude/: SKILL.md
skills/audit-claude/references/: contracts.md  decision-matrix.md  freshness.md  profile.md  report-template.md
skills/audit-claude/references/checks/: claude-md.md  consolidate.md  entities.md  local-docs.md  (+4 more)
skills/clauditor/: SKILL.md
skills/clauditor/references/: anti-patterns.md  contracts.md  decision-matrix.md  freshness.md  sources.md
test/fixtures/: EXPECTED.md
test/fixtures/memory/: MEMORY.md  feedback_sql_a.md  feedback_sql_b.md  project_done.md
test/fixtures/sample-project/: .mcp.json  AGENTS.md  CLAUDE.md  pyproject.toml
test/fixtures/sample-project/.claude/: settings.json
test/fixtures/sample-project/.claude/agents/: helper.md
test/fixtures/sample-project/.claude/rules/: ddl-conventions.md  sql-style.md
test/fixtures/sample-project/.local/docs/: deploy-runbook.md  done-PROJ-1.md  zametki-arhitektura.md
test/fixtures/sample-project/migrations/: 0001_init.sql
(+9 files in other folders)
