[project]
name = "sample-project"
version = "0.1.0"
description = "Sample project for audit-claude fixture testing"
requires-python = ">=3.12"

[project.dependencies]
httpx = ">=0.27"
pydantic = ">=2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
